# NEURAL-DARWINISM-IN-MULTIMODAL-AI-ARCHITECTURES-THAT-EVOLVE-TO-LEARN

./: README.md
Ai Architect/: Dockerfile  README.md  hydra_train.py  pyproject.toml  requirements.txt
Ai Architect/configs/: ddp_2xa100.yaml  default.yaml
Ai Architect/notebooks/: demo.py
Ai Architect/scripts/: eval.py  train.py
Ai Architect/src/evohm/: data.py  extractors.py  fusion.py  losses.py  model.py  modules.py  router.py  strategist.py  trainer.py
